--- a/client/AndroidManifest.xml
+++ b/client/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".JoinActivity"/>
         <activity android:name=".CreateActivity"/>
+        <activity android:name=".WaitingActivity"/>
     </application>
 
 </manifest>
