--- a/client/AndroidManifest.xml
+++ b/client/AndroidManifest.xml
@@ -11,17 +11,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".JoinActivity"/>
-        <activity android:name=".CreateActivity"/>
-        <activity android:name=".WaitingActivity"/>
-        <activity android:name=".GameActivity"/>
+        <activity android:name=".main.JoinActivity"/>
+        <activity android:name=".main.CreateActivity"/>
+        <activity android:name=".main.WaitingActivity"/>
+        <activity android:name=".main.NightActivity"/>
+        <activity android:name=".main.DayActivity"/>
+        <activity android:name=".types.CupidonActivity"/>
+        <activity android:name=".types.HunterActivity"/>
+        <activity android:name=".types.SeerActivity"/>
+        <activity android:name=".types.WitcherActivity"/>
+        <activity android:name=".types.WolfActivity"/>
     </application>
 
 </manifest>
